--- a/client/Amazon/package.json
+++ b/client/Amazon/package.json
@@ -17,11 +17,13 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "currency-converter-lt": "^2.0.1",
+    "firebase": "^10.13.2",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.0",
     "react-spinners": "^0.14.1",
