--- a/client/Amazon/package.json
+++ b/client/Amazon/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "currency-converter-lt": "^2.0.1",
